--- a/client/main.css
+++ b/client/main.css
@@ -44,7 +44,7 @@ h5 {
     margin: 12px 0px 4px 0px;
     margin-bottom: 4px;
     display: inline-block;;
-    margin-right: 1em;
+    margin-right: .8em;
 }
 
 form {
@@ -91,16 +91,6 @@ ul {
     background: white;
 }
 
-.delete {
-    float: right;
-    display: block;
-    font-weight: bold;
-    background: none;
-    font-size: 1.2em;
-    border: none;
-    position: relative;
-}
-
 li {
     position: relative;
     list-style: none;
@@ -108,10 +98,21 @@ li {
     border-bottom: #eee solid 1px;
 }
 
-li .text {
-    margin-left: 10px;
+li .content {
+    display: inline-block;
 }
 
-.toggle-private {
-    margin-left: 5px;
+.content div {
+    padding: 2px 0px;
+}
+
+.delete {
+    position: absolute;
+    right: 15px;
+    padding: 0px;
+    display: inline-block;
+    font-weight: bold;
+    background: none;
+    font-size: 1.2em;
+    border: none;
 }
